@@ -1,3 +1,13 @@
+2006-02-01  Paolo Bonzini  <bonzini@gnu.org>
+
+        PR target/25259
+        * stdint.m4: New.
+
+2005-12-20  Paolo Bonzini  <bonzini@gnu.org>
+
+	Revert Ada-related part of the previous change.
+
+	* mt-ppc-aix: Delete.
 2005-12-20  Paolo Bonzini  <bonzini@gnu.org>
 
         Revert Ada-related part of the previous change.
